# labs_SP

./: README.md
kurs/: server.cpp
lab_1/: main.cpp
lab_2/: main.cpp  program_2.cpp
lab_3(broken)/: main.cpp  program_#.cpp
lab_4/: main.cpp
lab_5/: main.cpp
lab_6/: CMakeLists.txt  main.cpp  main.glade
lab_7/: client.cpp  server.cpp
